--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <meta name="description" content="Electrical Engineering Student Portfolio - Chip Design & Electronics">
-    <title>[Your Name] | EE Portfolio</title>
+    <title>Nick Rathfelder | EE Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -1481,15 +1481,15 @@
         <div class="container">
             <div class="hero-wrapper">
                 <div class="hero-content">
-                    <h1>[Your Name]</h1>
+                    <h1>Nick Rathfelder</h1>
                     <p class="subtitle">Electrical Engineering Student</p>
-                    <p class="tagline">Chip Design | PCB Development | Embedded Systems</p>
+                    <p class="tagline">Chip Design | Digital Hardware | PCB Development</p>
                     <div class="social-links">
-                        <a href="[Your LinkedIn URL]" class="social-link" target="_blank">
+                        <a href="https://www.linkedin.com/in/nicholas-rathfelder-304542250/" class="social-link" target="_blank">
                             <svg fill="currentColor" viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
                             LinkedIn
                         </a>
-                        <a href="[Your GitHub URL]" class="social-link" target="_blank">
+                        <a href="https://github.com/NickRathfelder" class="social-link" target="_blank">
                             <svg fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                             GitHub
                         </a>
@@ -1499,7 +1499,7 @@
                     <div class="headshot-container">
                         <!-- Replace this div with: <img src="your-headshot.jpg" alt="Your Name"> -->
                         <div class="headshot-placeholder">
-                            [Your Headshot Image<br>280x280px]
+                            <img src="headshot_circle.png" alt="Nick Rathfelder">
                         </div>
                     </div>
                 </div>
@@ -1519,20 +1519,20 @@
                         Education
                     </h3>
                     <div class="info-item">
-                        <span class="info-label">University</span>
-                        <span class="info-value">[University Name]</span>
+                        <span class="info-label">University: </span>
+                        <span class="info-value">University of Waterloo</span>
                     </div>
                     <div class="info-item">
-                        <span class="info-label">Degree</span>
-                        <span class="info-value">[B.S./M.S. in Electrical Engineering]</span>
+                        <span class="info-label">Degree: </span>
+                        <span class="info-value">B.S. in Electrical Engineering</span>
                     </div>
                     <div class="info-item">
-                        <span class="info-label">Expected Graduation</span>
-                        <span class="info-value">[Month Year]</span>
+                        <span class="info-label">Expected Graduation: </span>
+                        <span class="info-value">June 2027</span>
                     </div>
                     <div class="info-item">
-                        <span class="info-label">GPA</span>
-                        <span class="info-value">[X.XX / 4.00]</span>
+                        <span class="info-label">GPA: </span>
+                        <span class="info-value"> 3.82 / 4.00</span>
                     </div>
                 </div>
 
@@ -1544,19 +1544,15 @@
                     <div class="honors-list">
                         <div class="honor-item">
                             <svg class="honor-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
-                            <span>[Term/Year] - Dean's List / Term Honors</span>
+                            <span>Spring 2025 (3A) - Term Distinction</span>
                         </div>
                         <div class="honor-item">
                             <svg class="honor-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
-                            <span>[Term/Year] - Dean's List / Term Honors</span>
+                            <span>Fall 2024 (2B) - Term Distinction</span>
                         </div>
                         <div class="honor-item">
                             <svg class="honor-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
-                            <span>[Term/Year] - Dean's List / Term Honors</span>
-                        </div>
-                        <div class="honor-item">
-                            <svg class="honor-icon" fill="currentColor" viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
-                            <span>[Term/Year] - Dean's List / Term Honors</span>
+                            <span>Winter 2024 (2A) - Term Distinction</span>
                         </div>
                     </div>
                 </div>
@@ -1567,8 +1563,8 @@
                         Design Team
                     </h3>
                     <div class="team-info">
-                        <h4>[Design Team Name]</h4>
-                        <p>[Brief description of your role and responsibilities on the team. Mention key projects, technologies used, or achievements.]</p>
+                        <h4>UW Baja SAE</h4>
+                        <p>Designed and built the wire harness powering the brake lights, kill switches, and front differential</p>
                     </div>
                 </div>
                 
@@ -1578,10 +1574,10 @@
                         Relevant Coursework
                     </h3>
                     <div class="coursework-list">
-                        <div class="coursework-item">[Course 1]</div>
-                        <div class="coursework-item">[Course 2]</div>
-                        <div class="coursework-item">[Course 3]</div>
-                        <div class="coursework-item">[Course 4]</div>
+                        <div class="coursework-item">ECE 222 - Digital Computers</div>
+                        <div class="coursework-item">ECE 318 - Communication Systems</div>
+                        <div class="coursework-item">ECE 340 - Electronic Circuits 2</div>
+                        <div class="coursework-item">ECE 375 - Electromagnetic Fields and Waves</div>
                     </div>
                 </div>
             </div>
@@ -1597,16 +1593,15 @@
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-title">[Job Title]</h3>
-                            <p class="experience-company">[Company Name]</p>
-                            <span class="experience-duration">[Start Month Year] - [End Month Year]</span>
+                            <h3 class="experience-title">FPGA Engineering Intern</h3>
+                            <p class="experience-company">Curtiss-Wright Defense Solutions</p>
+                            <span class="experience-duration">Sep 2025 - Dec 2025</span>
                         </div>
                         <div class="experience-description">
-                            <p>[Brief description of your role and key responsibilities]</p>
+                            <p>Designed, simulated and tested FPGA-based systems supporting aerospace and defense technologies.</p>
                             <ul>
-                                <li>[Key achievement or responsibility 1]</li>
-                                <li>[Key achievement or responsibility 2]</li>
-                                <li>[Key achievement or responsibility 3]</li>
+                                <li>Developed RTL and integrated 3rd party IP to support the design, simulation and testing of mission-critical aerospace and defense systems</li>
+                                <li>Implemented a UART-based debug interface to provide visibility into internal hardware states during restricted-access environmental testing</li>
                             </ul>
                         </div>
                         <div class="tech-stack">
@@ -1630,7 +1625,6 @@
                             <ul>
                                 <li>[Key achievement or responsibility 1]</li>
                                 <li>[Key achievement or responsibility 2]</li>
-                                <li>[Key achievement or responsibility 3]</li>
                             </ul>
                         </div>
                         <div class="tech-stack">
@@ -1654,7 +1648,6 @@
                             <ul>
                                 <li>[Key achievement or responsibility 1]</li>
                                 <li>[Key achievement or responsibility 2]</li>
-                                <li>[Key achievement or responsibility 3]</li>
                             </ul>
                         </div>
                         <div class="tech-stack">
