--- a/index.html
+++ b/index.html
@@ -1598,16 +1598,15 @@
                             <span class="experience-duration">Sep 2025 - Dec 2025</span>
                         </div>
                         <div class="experience-description">
-                            <p>Designed, simulated and tested FPGA-based systems supporting aerospace and defense technologies.</p>
+                            <p>Designed, simulated and tested FPGA-based systems supporting aerospace and defense technologies</p>
                             <ul>
                                 <li>Developed RTL and integrated 3rd party IP to support the design, simulation and testing of mission-critical aerospace and defense systems</li>
                                 <li>Implemented a UART-based debug interface to provide visibility into internal hardware states during restricted-access environmental testing</li>
                             </ul>
                         </div>
                         <div class="tech-stack">
-                            <span class="tech-tag">[Technology 1]</span>
-                            <span class="tech-tag">[Technology 2]</span>
-                            <span class="tech-tag">[Technology 3]</span>
+                            <span class="tech-tag">Verilog</span>
+                            <span class="tech-tag">FPGA</span>
                         </div>
                     </div>
                 </div>
@@ -1616,21 +1615,20 @@
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-title">[Job Title]</h3>
-                            <p class="experience-company">[Company Name]</p>
-                            <span class="experience-duration">[Start Month Year] - [End Month Year]</span>
+                            <h3 class="experience-title">Controls and Electrical Engineering Intern</h3>
+                            <p class="experience-company">Musashi AI</p>
+                            <span class="experience-duration">Jan 2025 - Apr 2025</span>
                         </div>
                         <div class="experience-description">
-                            <p>[Brief description of your role and key responsibilities]</p>
+                            <p>Developed and tested PLC-based control systems for automotive AI inspection systems</p>
                             <ul>
-                                <li>[Key achievement or responsibility 1]</li>
-                                <li>[Key achievement or responsibility 2]</li>
+                                <li>Updated electrical drawings and developed PLC/robot programs for AI automotive inspection machines</li>
+                                <li>Upgraded the Automate 2025 tradeshow inspection cell to allow for onboard chatter inspection of automotive camshafts</li>
                             </ul>
                         </div>
                         <div class="tech-stack">
-                            <span class="tech-tag">[Technology 1]</span>
-                            <span class="tech-tag">[Technology 2]</span>
-                            <span class="tech-tag">[Technology 3]</span>
+                            <span class="tech-tag">PLC</span>
+                            <span class="tech-tag">Solidworks</span>
                         </div>
                     </div>
                 </div>
@@ -1639,21 +1637,20 @@
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-title">[Job Title]</h3>
-                            <p class="experience-company">[Company Name]</p>
-                            <span class="experience-duration">[Start Month Year] - [End Month Year]</span>
+                            <h3 class="experience-title">Electrical Engineering Intern</h3>
+                            <p class="experience-company">Martinrea International</p>
+                            <span class="experience-duration">Sep 2023 - Dec 2023</span>
                         </div>
                         <div class="experience-description">
-                            <p>[Brief description of your role and key responsibilities]</p>
+                            <p>Contributed to continuous improvement of automotive assembly lines through AI inspection systems</p>
                             <ul>
-                                <li>[Key achievement or responsibility 1]</li>
-                                <li>[Key achievement or responsibility 2]</li>
+                                <li>Provided support for the engineering team in the maintainence and improvement of the line</li>
+                                <li>Integrated GPIO-triggered serial messaging into the in-house weld inspection system to improve system response time</li>
                             </ul>
                         </div>
                         <div class="tech-stack">
-                            <span class="tech-tag">[Technology 1]</span>
-                            <span class="tech-tag">[Technology 2]</span>
-                            <span class="tech-tag">[Technology 3]</span>
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">Raspberry Pi</span>
                         </div>
                     </div>
                 </div>
@@ -1662,22 +1659,20 @@
                 <div class="experience-item">
                     <div class="experience-card">
                         <div class="experience-header">
-                            <h3 class="experience-title">[Job Title]</h3>
-                            <p class="experience-company">[Company Name]</p>
-                            <span class="experience-duration">[Start Month Year] - [End Month Year]</span>
+                            <h3 class="experience-title">Process Engineering Intern</h3>
+                            <p class="experience-company">Stelco - Lake Erie Works</p>
+                            <span class="experience-duration">Jan 2023 - Apr 2023</span>
                         </div>
                         <div class="experience-description">
-                            <p>[Brief description of your role and key responsibilities]</p>
+                            <p>Supported the analysis and optimization of steel manufacturing processes to improve efficiency and workplace safety</p>
                             <ul>
-                                <li>[Key achievement or responsibility 1]</li>
-                                <li>[Key achievement or responsibility 2]</li>
-                                <li>[Key achievement or responsibility 3]</li>
+                                <li>Provided the operating team at the Hot Strip Mill insight into daily operations through the creation of Microsoft Power BI reports</li>
+                                <li>Started the development of a MATLAB and PLC based image analysis program to monitor slag build up on the walls of the BOF</li>
                             </ul>
                         </div>
                         <div class="tech-stack">
-                            <span class="tech-tag">[Technology 1]</span>
-                            <span class="tech-tag">[Technology 2]</span>
-                            <span class="tech-tag">[Technology 3]</span>
+                            <span class="tech-tag">MATLAB</span>
+                            <span class="tech-tag">Microsoft Power Bi</span>
                         </div>
                     </div>
                 </div>
@@ -1705,7 +1700,7 @@
                         </div>
                         <div class="skill-items">
                             <div class="skill-item">
-                                <div class="skill-name">Python</div>
+                                <div class="skill-name">Verilog/VHDL</div>
                                 <div class="skill-level">
                                     <span class="skill-percentage">Advanced</span>
                                 </div>
@@ -1717,7 +1712,13 @@
                                 </div>
                             </div>
                             <div class="skill-item">
-                                <div class="skill-name">Verilog/VHDL</div>
+                                <div class="skill-name">Python</div>
+                                <div class="skill-level">
+                                    <span class="skill-percentage">Intermediate</span>
+                                </div>
+                            </div>
+                            <div class="skill-item">
+                                <div class="skill-name">TCL</div>
                                 <div class="skill-level">
                                     <span class="skill-percentage">Intermediate</span>
                                 </div>
@@ -1741,25 +1742,31 @@
                         </div>
                         <div class="skill-items">
                             <div class="skill-item">
-                                <div class="skill-name">Altium Designer</div>
-                                <div class="skill-level">
-                                    <span class="skill-percentage">Proficient</span>
-                                </div>
-                            </div>
-                            <div class="skill-item">
                                 <div class="skill-name">Xilinx Vivado</div>
                                 <div class="skill-level">
-                                    <span class="skill-percentage">Proficient</span>
+                                    <span class="skill-percentage">Advanced</span>
                                 </div>
                             </div>
                             <div class="skill-item">
-                                <div class="skill-name">SolidWorks</div>
+                                <div class="skill-name">Quartus Prime</div>
+                                <div class="skill-level">
+                                    <span class="skill-percentage">Advanced</span>
+                                </div>
+                            </div>
+                            <div class="skill-item">
+                                <div class="skill-name">Altium Designer</div>
+                                <div class="skill-level">
+                                    <span class="skill-percentage">Advanced</span>
+                                </div>
+                            </div>
+                            <div class="skill-item">
+                                <div class="skill-name">ModelSim</div>
                                 <div class="skill-level">
                                     <span class="skill-percentage">Intermediate</span>
                                 </div>
                             </div>
                             <div class="skill-item">
-                                <div class="skill-name">KiCad</div>
+                                <div class="skill-name">LTSpice</div>
                                 <div class="skill-level">
                                     <span class="skill-percentage">Intermediate</span>
                                 </div>
@@ -1777,7 +1784,7 @@
                         </div>
                         <div class="skill-items">
                             <div class="skill-item">
-                                <div class="skill-name">PCB Design & Layout</div>
+                                <div class="skill-name">Circuit Design</div>
                                 <div class="skill-level">
                                     <span class="skill-percentage">Advanced</span>
                                 </div>
@@ -1785,21 +1792,28 @@
                             <div class="skill-item">
                                 <div class="skill-name">Soldering (SMD/Through-hole)</div>
                                 <div class="skill-level">
-                                    <span class="skill-percentage">Proficient</span>
+                                    <span class="skill-percentage">Advanced</span>
                                 </div>
                             </div>
                             <div class="skill-item">
-                                <div class="skill-name">Circuit Design</div>
+                                <div class="skill-name">Circuit Simulation</div>
                                 <div class="skill-level">
-                                    <span class="skill-percentage">Proficient</span>
+                                    <span class="skill-percentage">Intermediate</span>
                                 </div>
                             </div>
                             <div class="skill-item">
-                                <div class="skill-name">Embedded Systems</div>
+                                <div class="skill-name">Timing Analysis</div>
                                 <div class="skill-level">
-                                    <span class="skill-percentage">Proficient</span>
+                                    <span class="skill-percentage">Intermediate</span>
                                 </div>
                             </div>
+                            <div class="skill-item">
+                                <div class="skill-name">Scope Capture</div>
+                                <div class="skill-level">
+                                    <span class="skill-percentage">Intermediate</span>
+                                </div>
+                            </div>
+                            
                         </div>
                     </div>
 
@@ -1816,7 +1830,6 @@
                             <div class="skill-tag-item">Logic Analyzer</div>
                             <div class="skill-tag-item">Multimeter</div>
                             <div class="skill-tag-item">Function Generator</div>
-                            <div class="skill-tag-item">Power Supply</div>
                             <div class="skill-tag-item">Spectrum Analyzer</div>
                         </div>
                     </div>
@@ -1830,12 +1843,11 @@
                             <h3>Microcontrollers & Boards</h3>
                         </div>
                         <div class="skill-tags">
+                            <div class="skill-tag-item">Xilinx Spartan FPGA</div>
+                            <div class="skill-tag-item">Altera Max 10 FPGA</div>
                             <div class="skill-tag-item">STM32</div>
-                            <div class="skill-tag-item">Arduino</div>
-                            <div class="skill-tag-item">Raspberry Pi</div>
-                            <div class="skill-tag-item">ESP32</div>
-                            <div class="skill-tag-item">Xilinx FPGAs</div>
                             <div class="skill-tag-item">ARM Cortex</div>
+                            <div class="skill-tag-item">Raspberry Pi</div>
                         </div>
                     </div>
 
@@ -1848,12 +1860,11 @@
                             <h3>Protocols & Interfaces</h3>
                         </div>
                         <div class="skill-tags">
-                            <div class="skill-tag-item">I2C</div>
-                            <div class="skill-tag-item">SPI</div>
                             <div class="skill-tag-item">UART</div>
                             <div class="skill-tag-item">USB</div>
-                            <div class="skill-tag-item">CAN</div>
-                            <div class="skill-tag-item">Ethernet</div>
+                            <div class="skill-tag-item">I2C</div>
+                            <div class="skill-tag-item">JTAG</div>
+                            <div class="skill-tag-item">SPI</div>
                         </div>
                     </div>
                 </div>
