--- a/index.html
+++ b/index.html
@@ -2072,7 +2072,7 @@
                     </div>
                     <h3>Complete Portfolio</h3>
                     <p>Download my full portfolio PDF with detailed project documentation and technical work.</p>
-                    <a href="[path-to-your-portfolio.pdf]" class="download-btn" download>
+                    <a href="/assets/Portfolio050325.pdf" class="download-btn" download>
                         <svg width="20" height="20" fill="currentColor" viewBox="0 0 16 16"><path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/><path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/></svg>
                         Download Portfolio
                     </a>
@@ -2083,7 +2083,7 @@
                     </div>
                     <h3>Resume</h3>
                     <p>Download my one-page resume with a concise summary of my education, experience, and skills.</p>
-                    <a href="[path-to-your-resume.pdf]" class="download-btn" download>
+                    <a href="/assets/Resume020826.pdf" class="download-btn" download>
                         <svg width="20" height="20" fill="currentColor" viewBox="0 0 16 16"><path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/><path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/></svg>
                         Download Resume
                     </a>
@@ -2127,7 +2127,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2026 [Your Name]. All rights reserved.</p>
+            <p>&copy; 2026 Nick Rathfelder. All rights reserved.</p>
         </div>
     </footer>
 
@@ -2198,13 +2198,13 @@
             try {
                 // SETUP REQUIRED: Replace with your Formspree endpoint
                 // Sign up at formspree.io and replace YOUR_FORM_ID below
-                // const response = await fetch('https://formspree.io/f/YOUR_FORM_ID', {
-                //     method: 'POST',
-                //     body: formData,
-                //     headers: {
-                //         'Accept': 'application/json'
-                //     }
-                // });
+                 const response = await fetch('https://formspree.io/f/mdalopgj', {
+                     method: 'POST',
+                     body: formData,
+                     headers: {
+                         'Accept': 'application/json'
+                     }
+                 });
                 
                 // Simulated success for demo
                 await new Promise(resolve => setTimeout(resolve, 1000));
