personal_update_real_1.1

--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@
         <div class="container">
             <div class="hero-wrapper">
                 <div class="hero-content">
-                    <h1>[Your Name]</h1>
+                    <h1>Nick Rathfelder</h1>
                     <p class="subtitle">Electrical Engineering Student</p>
                     <p class="tagline">Chip Design | Digital Hardware | PCB Development</p>
                     <div class="social-links">
